# MAPA-DE-VOT

./: .env.example  .gitignore  Makefile  README.md  pytest.ini
apps/api/: pyproject.toml
apps/api/apps/api/: main.py
apps/api/apps/api/routers/: candidates.py  elections.py  exports.py  maps.py  search.py  sources.py  territories.py
apps/api/tests/: conftest.py  test_candidates.py  test_elections.py  test_search.py  test_sources_exports_maps.py  test_system.py  test_territories.py
apps/web/: middleware.ts  next.config.mjs  package-lock.json  package.json  tsconfig.tsbuildinfo
apps/web/app/: globals.css  layout.css  layout.tsx  page.tsx
apps/web/app/candidatos/: page.tsx
apps/web/app/comparar/: page.tsx
apps/web/app/estrategia/: page.tsx
apps/web/app/exportar/: page.tsx
apps/web/app/login/: page.tsx
apps/web/app/mapa/: page.tsx
apps/web/components/candidate/: Ficha360.tsx  OfficialCandidateDetail.tsx  OfficialCandidates.tsx  ficha360.css
apps/web/components/command/: CommandCenter.tsx
apps/web/components/compare/: Comparador.tsx
apps/web/components/export/: ExportPanel.tsx
apps/web/components/layout/: PrivateShell.tsx  Sidebar.tsx  Topbar.tsx
apps/web/lib/: auth.ts  demo.ts
apps/worker/: pyproject.toml
apps/worker/apps/worker/: celery_app.py
apps/worker/apps/worker/tasks/: etl_ibge.py  etl_tse.py  exports.py
infra/compose/: docker-compose.yml
infra/docker/: api.Dockerfile  postgres-init.sql  worker.Dockerfile
scripts/: build_indexes.py  import_tse_2022_ro.py  index_search.py  ingest.py  reconcile.py  seed_sources.py
(+13 files in other folders)
