[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mapa-voto-worker"
version = "0.1.0"
description = "Worker Celery — ETL e exportações assíncronas — Mapa de Voto"
requires-python = ">=3.12"
dependencies = [
    "mapa-voto-shared",
    "mapa-voto-db",
    "mapa-voto-etl",
    "celery[redis]>=5.4",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.setuptools.packages.find]
where = ["."]
include = ["apps.worker*"]
